updating to allow for separate admin login

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,7 @@
 
 <body>
   <div id="root">
-    <form action="/login" method="post">
-      <input name="username" placeholder="Username" />
-      <input name="password" type="password" placeholder="Password" />
-      <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="signup.html">Sign up here!</a></p>
+    <h1>How many cups of sugar does it take to get to the moon?</h1>
   </div>
 </body>
 
